--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "jszip": "^3.10.1",
     "simplex-noise": "^4.0.3",
-    "three": "^0.170.0"
+    "three": "^0.170.0",
+    "urdf-loader": "^0.12.4"
   }
 }
