--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/dat.gui": "^0.7.13",
     "@types/jszip": "^3.4.1",
     "@types/three": "^0.170.0",
+    "dat.gui": "^0.7.9",
     "typescript": "~5.6.2",
     "vite": "^6.0.1"
   },
